--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -1,4 +1,6 @@
 ﻿@model BugTrackerMVC.Models.Project
+@using BugTrackerMVC.Services.Interfaces
+@inject IImageService _ImageService
 
 @{
     ViewData["Title"] = "Details";
@@ -41,16 +43,10 @@
             @Html.DisplayFor(model => model.EndDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageFileData)
+            @Html.DisplayNameFor(model => model.ImageFormFile)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageFileData)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageFileType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageFileType)
+            <img src="@_ImageService.ConvertByteArrayToFile(Model.ImageFileData!, Model.ImageFileType!)" class="img-fluid" style="max-height: 200px;" alt="project image" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Archived)
