221128 added ArchivedProjects page

--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -57,7 +57,7 @@
                 </div>
                 <div class="form-group form-check my-2">
                     <label class="form-check-label">
-                        <input class="form-check-input" asp-for="Archived" /> @Html.DisplayNameFor(model => model.Archived)
+                        <input class="form-check-input" asp-for="Archived" />&nbsp; Archive?
                     </label>
                 </div>
                 <div class="form-group">
