--- a/Views/Projects/Archive.cshtml
+++ b/Views/Projects/Archive.cshtml
@@ -1,14 +1,12 @@
 ﻿@model BugTrackerMVC.Models.Project
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Archive";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Project</h4>
+    <h1>Archive</h1>
+    <h3>Are you sure you want to archive this project?</h3>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -42,12 +40,6 @@
             @Html.DisplayFor(model => model.EndDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageFileData)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageFileData)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImageFileType)
         </dt>
         <dd class = "col-sm-10">
@@ -63,19 +55,19 @@
             @Html.DisplayNameFor(model => model.Company)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Company.Name)
+            @Html.DisplayFor(model => model.Company!.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProjectPriority)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProjectPriority.Name)
+            @Html.DisplayFor(model => model.ProjectPriority!.Name)
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Archive" method="post">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Archive" class="btn btn-danger rounded-pill" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
