--- a/Views/Projects/Restore.cshtml
+++ b/Views/Projects/Restore.cshtml
@@ -1,75 +1,73 @@
 ﻿@model BugTrackerMVC.Models.Project
-@using BugTrackerMVC.Services.Interfaces
-@using BugTrackerMVC.Enums
-@inject IFileService _ImageService
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Restore";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Project</h4>
+    <h1>Restore</h1>
+    <h3>Are you sure you want to restore this project?</h3>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Created)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Created)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.StartDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StartDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EndDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.EndDate)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageFormFile)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ImageFileType)
         </dt>
-        <dd class = "col-sm-10">
-            <img src="@_ImageService.ConvertByteArrayToFile(Model.ImageFileData!, Model.ImageFileType!, (int)DefaultImg.ProjectImg)" class="img-fluid" style="max-height: 200px;" alt="project image" />
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ImageFileType)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Archived)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Archived)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Company)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Company!.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ProjectPriority)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ProjectPriority!.Name)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+    <form asp-action="Restore" method="post">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Restore" class="btn btn-success rounded-pill" /> |
+        <a asp-action="ArchivedProjects">Back to List</a>
+    </form>
 </div>
