--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
+<div class="container mt-5">
+
 <h1>Create</h1>
 
 <h4>Ticket</h4>
@@ -34,12 +36,12 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Archived" /> @Html.DisplayNameFor(model => model.Archived)
+                    <input class="form-check-input" asp-for="Archived" />&nbsp; @Html.DisplayNameFor(model => model.Archived)
                 </label>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="ArchivedByProject" /> @Html.DisplayNameFor(model => model.ArchivedByProject)
+                    <input class="form-check-input" asp-for="ArchivedByProject" />&nbsp; @Html.DisplayNameFor(model => model.ArchivedByProject)
                 </label>
             </div>
             <div class="form-group">
@@ -62,19 +64,21 @@
                 <label asp-for="DeveloperUserId" class="control-label"></label>
                 <select asp-for="DeveloperUserId" class ="form-control" asp-items="ViewBag.DeveloperUserId"></select>
             </div>
-            <div class="form-group">
+            <div class="form-group my-2">
                 <label asp-for="SubmitterUserId" class="control-label"></label>
                 <select asp-for="SubmitterUserId" class ="form-control" asp-items="ViewBag.SubmitterUserId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary rounded-pill my-2" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
+<div class="my-2">
     <a asp-action="Index">Back to List</a>
+</div>
+
 </div>
 
 @section Scripts {
