--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
+<div class="container mt-5">
+
 <h1>Edit</h1>
 
 <h4>Ticket</h4>
@@ -35,12 +37,12 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Archived" /> @Html.DisplayNameFor(model => model.Archived)
+                    <input class="form-check-input" asp-for="Archived" />&nbsp; @Html.DisplayNameFor(model => model.Archived)
                 </label>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="ArchivedByProject" /> @Html.DisplayNameFor(model => model.ArchivedByProject)
+                    <input class="form-check-input" asp-for="ArchivedByProject" />&nbsp; @Html.DisplayNameFor(model => model.ArchivedByProject)
                 </label>
             </div>
             <div class="form-group">
@@ -68,20 +70,22 @@
                 <select asp-for="DeveloperUserId" class="form-control" asp-items="ViewBag.DeveloperUserId"></select>
                 <span asp-validation-for="DeveloperUserId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group my-2">
                 <label asp-for="SubmitterUserId" class="control-label"></label>
                 <select asp-for="SubmitterUserId" class="form-control" asp-items="ViewBag.SubmitterUserId"></select>
                 <span asp-validation-for="SubmitterUserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary rounded-pill my-2" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div class="my-2">
+        <a asp-action="Index">Back to List</a>
+    </div>
+
 </div>
 
 @section Scripts {
