--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
+<div class="container mt-5">
+
 <h1>Index</h1>
 
 <p>
@@ -73,22 +75,22 @@
                 @Html.DisplayFor(modelItem => item.ArchivedByProject)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Project.Description)
+                @Html.DisplayFor(modelItem => item.Project!.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TicketPriority.Name)
+                @Html.DisplayFor(modelItem => item.TicketPriority!.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TicketType.Name)
+                @Html.DisplayFor(modelItem => item.TicketType!.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TicketStatus.Name)
+                @Html.DisplayFor(modelItem => item.TicketStatus!.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DeveloperUser.Id)
+                @Html.DisplayFor(modelItem => item.DeveloperUser!.FullName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SubmitterUser.Id)
+                @Html.DisplayFor(modelItem => item.SubmitterUser!.FullName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
@@ -99,3 +101,5 @@
 }
     </tbody>
 </table>
+
+</div>
