221129 added more Project service actions

--- a/Views/Projects/Archive.cshtml
+++ b/Views/Projects/Archive.cshtml
@@ -57,6 +57,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Company!.Name)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Members)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Members)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Tickets)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Tickets)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProjectPriority)
         </dt>
