--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -6,15 +6,20 @@
 
 <div class="container mt-5">
 
-<h1>Edit</h1>
-
-<h4>Ticket</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post" asp-controller="Tickets">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Created" />
+            <input type="hidden" asp-for="Archived" />
+            <input type="hidden" asp-for="ArchivedByProject" />
+            @*<input type="hidden" asp-for="DeveloperUserId" />*@
+            <input type="hidden" asp-for="SubmitterUserId" />
+
+            <h1>Edit a Ticket</h1>
+            <hr />
+
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -26,24 +31,9 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Created" class="control-label"></label>
-                <input asp-for="Created" class="form-control" />
-                <span asp-validation-for="Created" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Updated" class="control-label"></label>
                 <input asp-for="Updated" class="form-control" />
                 <span asp-validation-for="Updated" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Archived" />&nbsp; @Html.DisplayNameFor(model => model.Archived)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="ArchivedByProject" />&nbsp; @Html.DisplayNameFor(model => model.ArchivedByProject)
-                </label>
             </div>
             <div class="form-group">
                 <label asp-for="ProjectId" class="control-label"></label>
@@ -69,11 +59,6 @@
                 <label asp-for="DeveloperUserId" class="control-label"></label>
                 <select asp-for="DeveloperUserId" class="form-control" asp-items="ViewBag.DeveloperUserId"></select>
                 <span asp-validation-for="DeveloperUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group my-2">
-                <label asp-for="SubmitterUserId" class="control-label"></label>
-                <select asp-for="SubmitterUserId" class="form-control" asp-items="ViewBag.SubmitterUserId"></select>
-                <span asp-validation-for="SubmitterUserId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary rounded-pill my-2" />
