221205 added Ticket service layer & started Assign PM action

--- a/Views/Projects/Archive.cshtml
+++ b/Views/Projects/Archive.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BugTrackerMVC.Models.Project
 
 @{
-    ViewData["Title"] = "Archive";
+    ViewData["Title"] = "Archive Project";
 }
 
 <div>
@@ -80,6 +80,6 @@
     <form asp-action="Archive" method="post">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Archive" class="btn btn-danger rounded-pill" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="AllProjects">Back to List</a>
     </form>
 </div>
