--- a/Views/Projects/AllProjects.cshtml
+++ b/Views/Projects/AllProjects.cshtml
@@ -4,7 +4,7 @@
 @inject IFileService _ImageService
 
 @{
-    ViewData["Title"] = "Archived Projects - Index";
+    ViewData["Title"] = "All Projects";
 }
 
 <div class="container mt-5">
@@ -12,7 +12,11 @@
         <div class="row g-0">
             <div class="col-md-12">
                 <div class="card-body">
-                    <h1>Projects, Archived</h1>
+                    <h1>All Projects</h1>
+
+                    <p>
+                        <a asp-action="Create">Create New</a>
+                    </p>
 
                     <table class="table">
                         <thead>
@@ -41,10 +45,10 @@
                                 <th>
                                     @Html.DisplayNameFor(model => model.Company)
                                 </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Members)
-                                </th>
                                 @*<th>
+                                @Html.DisplayNameFor(model => model.Members)
+                                </th>
+                                <th>
                                 @Html.DisplayNameFor(model => model.Tickets)
                                 </th>*@
                                 <th>
@@ -82,16 +86,19 @@
                                         @Html.DisplayFor(modelItem => item.Company!.Name)
                                     </td>
                                     @*<td>
-                                        @Html.DisplayFor(modelItem => item.Members)
-                                    </td>*@
-                                    @*<td>
-                                        @Html.DisplayFor(modelItem => item.Tickets!.Title)
-                                    </td>*@
+                                @Html.DisplayFor(modelItem => item.Members)
+                                </td>
+                                <td>
+                                @Html.DisplayFor(modelItem => item.Tickets!.Title)
+                                </td>*@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.ProjectPriority!.Name)
                                     </td>
                                     <td>
-                                        <a asp-action="Restore" asp-route-id="@item.Id">Restore</a>
+                                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                                        <a asp-action="Archive" asp-route-id="@item.Id">Archive</a> |
+                                        <a asp-action="AssignProjectManager" asp-route-id="@item.Id">Assign Project Manager(s)</a>
                                     </td>
                                 </tr>
                             }
