--- a/Views/Projects/AssignProjectManager.cshtml
+++ b/Views/Projects/AssignProjectManager.cshtml
@@ -4,14 +4,14 @@
 @inject IFileService _ImageService
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Assign Project Manager";
 }
 
 <div class="container mt-5">
 
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Edit" method="post" asp-controller="Projects" enctype="multipart/form-data">
+            <form asp-action="Create" method="post" asp-controller="Projects" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Id" />
                 <input type="hidden" asp-for="CompanyId" />
@@ -20,43 +20,35 @@
                 <input type="hidden" asp-for="ImageFileType" />
                 <input type="hidden" asp-for="Archived" />
 
-                <h1>Edit a Project</h1>
+                <h1>Assign Project Manager</h1>
                 <hr />
 
-                <!-- add image upload -->
-                <div class="form-group">
-                    <label asp-for="ImageFormFile" class="control-label">Upload an Image for the Project</label>
-                    <img id="projectImage" class="img-fluid border rounded-3 m-2" style="max-height: 250px;" src="@_ImageService.ConvertByteArrayToFile(Model.ImageFileData!, Model.ImageFileType!, (int)DefaultImg.ProjectImg)" alt="project image">
-                    <input asp-for="ImageFormFile" type="file" class="form-control mt-3 pt-2" accept=".png,.jpg,.jpeg,.gif"
-                           onchange="document.getElementById('projectImage').src=window.URL.createObjectURL(this.files[0])" />
-                </div>
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" />
+                    <input asp-for="Name" disabled class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Description" class="control-label"></label>
-                    <input asp-for="Description" class="form-control" />
+                    <input asp-for="Description" disabled class="form-control" />
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="StartDate" class="control-label"></label>
-                    <input asp-for="StartDate" class="form-control" />
+                    <input asp-for="StartDate" disabled class="form-control" />
                     <span asp-validation-for="StartDate" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="">
                     <label asp-for="EndDate" class="control-label"></label>
-                    <input asp-for="EndDate" class="form-control" />
+                    <input asp-for="EndDate" disabled class="form-control" />
                     <span asp-validation-for="EndDate" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="">
                     <label asp-for="ProjectPriorityId" class="control-label">Priority</label>
-                    <select asp-for="ProjectPriorityId" class="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
-                    <span asp-validation-for="ProjectPriorityId" class="text-danger"></span>
+                    <select asp-for="ProjectPriorityId" disabled class ="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary rounded-pill my-2" />
+                    <input type="submit" value="Create" class="btn btn-primary rounded-pill my-2" />
                 </div>
             </form>
         </div>
