--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -51,7 +51,7 @@
                     <span asp-validation-for="EndDate" class="text-danger"></span>
                 </div>
                 <div class="">
-                    <label asp-for="ProjectPriorityId" class="control-label"></label>
+                    <label asp-for="ProjectPriorityId" class="control-label">Priority</label>
                     <select asp-for="ProjectPriorityId" class ="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
                 </div>
                 <div class="form-group">
@@ -62,7 +62,7 @@
     </div>
 
     <div class="my-2">
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="AllProjects">Back to List</a>
     </div>
 
 </div>
