--- a/Views/Projects/Restore.cshtml
+++ b/Views/Projects/Restore.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BugTrackerMVC.Models.Project
 
 @{
-    ViewData["Title"] = "Restore";
+    ViewData["Title"] = "Restore Project";
 }
 
 <div>
