--- a/Views/Tickets/Archive.cshtml
+++ b/Views/Tickets/Archive.cshtml
@@ -1,15 +1,12 @@
 ﻿@model BugTrackerMVC.Models.Ticket
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Archive Ticket";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Ticket</h4>
-    <hr />
+    <h1>Archive</h1>
+    <h3>Are you sure you want to archive this ticket?</h3>
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
@@ -51,43 +48,43 @@
             @Html.DisplayNameFor(model => model.Project)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project.Description)
+            @Html.DisplayFor(model => model.Project!.Description)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TicketPriority)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TicketPriority.Name)
+            @Html.DisplayFor(model => model.TicketPriority!.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TicketType)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TicketType.Name)
+            @Html.DisplayFor(model => model.TicketType!.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TicketStatus)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TicketStatus.Name)
+            @Html.DisplayFor(model => model.TicketStatus!.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DeveloperUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DeveloperUser.Id)
+            @Html.DisplayFor(model => model.DeveloperUser!.Id)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.SubmitterUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SubmitterUser.Id)
+            @Html.DisplayFor(model => model.SubmitterUser!.FullName)
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Archive" method="post">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Archive" class="btn btn-danger rounded-pill" /> |
+        <a asp-action="AllTickets">Back to List</a>
     </form>
 </div>
