--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -11,10 +11,12 @@
         <form asp-action="Edit" method="post" asp-controller="Tickets">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ProjectId" />
             <input type="hidden" asp-for="Created" />
+            <input type="hidden" asp-for="Updated" />
             <input type="hidden" asp-for="Archived" />
             <input type="hidden" asp-for="ArchivedByProject" />
-            @*<input type="hidden" asp-for="DeveloperUserId" />*@
+            <input type="hidden" asp-for="DeveloperUserId" />
             <input type="hidden" asp-for="SubmitterUserId" />
 
             <h1>Edit a Ticket</h1>
@@ -30,35 +32,40 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Updated" class="control-label"></label>
                 <input asp-for="Updated" class="form-control" />
                 <span asp-validation-for="Updated" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                <label asp-for="ProjectId" class="control-label">Project</label>
+                <select asp-for="ProjectId" class="form-control" disabled asp-items="ViewBag.ProjectId"></select>
                 <span asp-validation-for="ProjectId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TicketTypeId" class="control-label"></label>
+                <label asp-for="TicketTypeId" class="control-label">Type</label>
                 <select asp-for="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
                 <span asp-validation-for="TicketTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TicketStatusId" class="control-label"></label>
+                <label asp-for="TicketStatusId" class="control-label">Status</label>
                 <select asp-for="TicketStatusId" class="form-control" asp-items="ViewBag.TicketStatusId"></select>
                 <span asp-validation-for="TicketStatusId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TicketPriorityId" class="control-label"></label>
+                <label asp-for="TicketPriorityId" class="control-label">Priority</label>
                 <select asp-for="TicketPriorityId" class="form-control" asp-items="ViewBag.TicketPriorityId"></select>
                 <span asp-validation-for="TicketPriorityId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeveloperUserId" class="control-label"></label>
-                <select asp-for="DeveloperUserId" class="form-control" asp-items="ViewBag.DeveloperUserId"></select>
+                <select asp-for="DeveloperUserId" class="form-control" disabled asp-items="ViewBag.DeveloperUserId"></select>
                 <span asp-validation-for="DeveloperUserId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="SubmitterUserId" class="control-label"></label>
+                <select asp-for="SubmitterUserId" class="form-control" disabled asp-items="ViewBag.SubmitterUserId"></select>
+                <span asp-validation-for="SubmitterUserId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary rounded-pill my-2" />
@@ -68,7 +75,7 @@
 </div>
 
     <div class="my-2">
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="AllTickets">Back to List</a>
     </div>
 
 </div>
