--- a/Views/Tickets/Restore.cshtml
+++ b/Views/Tickets/Restore.cshtml
@@ -1,14 +1,12 @@
 ﻿@model BugTrackerMVC.Models.Ticket
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>Ticket</h4>
-    <hr />
+    <h1>Restore</h1>
+    <h3>Are you sure you want to restore this ticket?</h3>
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
@@ -83,8 +81,10 @@
             @Html.DisplayFor(model => model.SubmitterUser!.FullName)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="AllTickets">Back to List</a>
+    
+    <form asp-action="Restore" method="post">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Restore" class="btn btn-success rounded-pill" /> |
+        <a asp-action="ArchivedTickets">Back to List</a>
+    </form>
 </div>
