--- a/Views/Projects/AllProjects.cshtml
+++ b/Views/Projects/AllProjects.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<BugTrackerMVC.Models.Project>
 @using BugTrackerMVC.Services.Interfaces
 @using BugTrackerMVC.Enums
-@inject IFileService _ImageService
+@inject IFileService _FileService
+@inject IBTProjectService _BTProjectService
 
 @{
     ViewData["Title"] = "All Projects";
@@ -45,10 +46,10 @@
                                 <th>
                                     @Html.DisplayNameFor(model => model.Company)
                                 </th>
-                                @*<th>
-                                @Html.DisplayNameFor(model => model.Members)
-                                </th>
                                 <th>
+                                    @Html.DisplayNameFor(model => model.Members)
+                                </th>
+                                @*<th>
                                 @Html.DisplayNameFor(model => model.Tickets)
                                 </th>*@
                                 <th>
@@ -65,6 +66,19 @@
                                         @Html.DisplayFor(modelItem => item.Name)
                                     </td>
                                     <td>
+                                        @{
+                                            BTUser? projectManager = await _BTProjectService.GetProjectManagerAsync(item.Id);
+                                        }
+                                        
+                                        @if (projectManager is null && User.IsInRole(nameof(BTRoles.Admin)))
+                                        {
+                                            <a class="btn btn-sm btn-outline-info" asp-action="AssignProjectManager" asp-route-id="@item.Id">Assign PM</a>
+                                        }
+                                        else {
+                                            <text>@(projectManager?.FullName ?? "Unassigned")</text>
+                                        }
+                                    </td>
+                                    <td>
                                         @Html.DisplayFor(modelItem => item.Description)
                                     </td>
                                     <td>
@@ -77,7 +91,7 @@
                                         @Html.DisplayFor(modelItem => item.EndDate)
                                     </td>
                                     <td>
-                                        <img src="@_ImageService.ConvertByteArrayToFile(item.ImageFileData!, item.ImageFileType!, (int)DefaultImg.ProjectImg)" class="img-fluid" style="max-height: 200px;" alt="project image" />
+                                        <img src="@_FileService.ConvertByteArrayToFile(item.ImageFileData!, item.ImageFileType!, (int)DefaultImg.ProjectImg)" class="img-fluid" style="max-height: 200px;" alt="project image" />
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Archived)
@@ -85,20 +99,19 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Company!.Name)
                                     </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Members)
+                                    </td>
                                     @*<td>
-                                @Html.DisplayFor(modelItem => item.Members)
-                                </td>
-                                <td>
-                                @Html.DisplayFor(modelItem => item.Tickets!.Title)
-                                </td>*@
+                                    @Html.DisplayFor(modelItem => item.Tickets!.Title)
+                                    </td>*@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.ProjectPriority!.Name)
                                     </td>
                                     <td>
                                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                                        <a asp-action="Archive" asp-route-id="@item.Id">Archive</a> |
-                                        <a asp-action="AssignProjectManager" asp-route-id="@item.Id">Assign Project Manager(s)</a>
+                                        <a asp-action="Archive" asp-route-id="@item.Id">Archive</a>
                                     </td>
                                 </tr>
                             }
