--- a/Views/Projects/UnassignedProjects.cshtml
+++ b/Views/Projects/UnassignedProjects.cshtml
@@ -1,19 +1,18 @@
 ﻿@model IEnumerable<BugTrackerMVC.Models.Project>
 @using BugTrackerMVC.Services.Interfaces
 @using BugTrackerMVC.Enums
-@inject IFileService _ImageService
+@inject IFileService _FileService
 
 @{
-    ViewData["Title"] = "My Projects";
+    ViewData["Title"] = "All Projects";
 }
 
 <div class="container mt-5">
-
     <div class="card mb-3">
         <div class="row g-0">
             <div class="col-md-12">
                 <div class="card-body">
-                    <h1>Your Projects</h1>
+                    <h1>Projects, Unassigned</h1>
 
                     <table class="table">
                         <thead>
@@ -74,7 +73,7 @@
                                         @Html.DisplayFor(modelItem => item.EndDate)
                                     </td>
                                     <td>
-                                        <img src="@_ImageService.ConvertByteArrayToFile(item.ImageFileData!, item.ImageFileType!, (int)DefaultImg.ProjectImg)" class="img-fluid" style="max-height: 200px;" alt="project image" />
+                                        <img src="@_FileService.ConvertByteArrayToFile(item.ImageFileData!, item.ImageFileType!, (int)DefaultImg.ProjectImg)" class="img-fluid" style="max-height: 200px;" alt="project image" />
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Archived)
@@ -84,8 +83,8 @@
                                     </td>
                                     @*<td>
                                 @Html.DisplayFor(modelItem => item.Members)
-                                </td>*@
-                                    @*<td>
+                                </td>
+                                <td>
                                 @Html.DisplayFor(modelItem => item.Tickets!.Title)
                                 </td>*@
                                     <td>
