221209 added Manage User Roles functionality

--- a/Views/Projects/AllProjects.cshtml
+++ b/Views/Projects/AllProjects.cshtml
@@ -111,7 +111,8 @@
                                     <td>
                                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                                        <a asp-action="Archive" asp-route-id="@item.Id">Archive</a>
+                                        <a asp-action="Archive" asp-route-id="@item.Id">Archive</a> |
+                                        <a asp-action="AddMembers" asp-route-id="@item.Id">Add Member(s)</a> 
                                     </td>
                                 </tr>
                             }
