--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,28 +2,30 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="container mt-5">
-
-    <div class="content ">
-        <div class="page-header d-md-flex justify-content-between">
-            <div>
-                <h3>Welcome to my BugTracker!</h3>
-                <p class="text-muted">Home page</p>
-            </div>
-            <div class="mt-3 mt-md-0">
-                <div id="dashboard-daterangepicker" class="btn btn-outline-light">
-                    <span></span>
-                </div>
-                <a href="#" class="btn btn-primary ml-0 ml-md-2 mt-2 mt-md-0 dropdown-toggle" data-toggle="dropdown">Actions</a>
-                <div class="dropdown-menu dropdown-menu-right">
-                    <a href="#" class="dropdown-item">Download</a>
-                    <a href="#" class="dropdown-item">Print</a>
-                </div>
+@*<div class="layout-wrapper">
+    <div class="content-wrapper">
+        <!-- Navigation -->
+        <partial name="_Sidebar" />
+        <div class="content-body">
+            <div class="content ">
+                <h2>Welcome to My BugTracker!</h2>
+                <!-- Components.... -->
             </div>
         </div>
     </div>
+</div>*@
 
+<div class="content container">
+    <div class="row row-cols-1 row-cols-md-2 align-items-center h-100">
+        <div class="col mt-3 mt-md-0">
+            <div>
+                <h3 class="textLight">Welcome to my BugTracker!</h3>
+                <p class="text-muted">Home page</p>
+            </div>
+        </div>
+    </div>
 </div>
+
 
 @*<div class="text-center">
     <h1 class="display-4">Welcome</h1>
