--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -5,64 +5,7 @@
     BTUser btUser = await UserManager.GetUserAsync(User);
 }
 
-<!-- begin::preloader-->
-@*<div class="preloader">
-    <div class="preloader-icon"></div>
-</div>*@
-<!-- end::preloader -->
-
-@*<div class="form-wrapper">
-
-    <!-- logo -->
-    <div id="logo">
-        <img src="../../assets/media/image/dark-logo.png" alt="image">
-    </div>
-    <!-- ./ logo -->
-
-
-    <h5>Sign in</h5>
-
-    <!-- form -->
-    <form>
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Username or email" required autofocus>
-        </div>
-        <div class="form-group">
-            <input type="password" class="form-control" placeholder="Password" required>
-        </div>
-        <div class="form-group d-flex justify-content-between">
-            <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" checked="" id="customCheck1">
-                <label class="custom-control-label" for="customCheck1">Remember me</label>
-            </div>
-            <a href="recovery-password.html">Reset password</a>
-        </div>
-        <button class="btn btn-primary btn-block">Sign in</button>
-        <hr>
-        <p class="text-muted">Login with your social media account.</p>
-        <ul class="list-inline">
-            <li class="list-inline-item">
-                <a href="#" class="btn btn-floating btn-facebook">
-                    <i class="fa fa-facebook"></i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-                <a href="#" class="btn btn-floating btn-google">
-                    <i class="fa fa-google"></i>
-                </a>
-            </li>
-        </ul>
-        <hr>
-        <p class="text-muted">Don't have an account?</p>
-        <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-outline-light btn-sm">Register now!</a>
-    </form>
-    <!-- ./ form -->
-
-
-</div>*@
-
-<div class="dropdown py-sm-4 ms-auto ms-sm-0 flex-shrink-1">
-
+<div class="header-body-right">
     @if (SignInManager.IsSignedIn(User))
     {
         <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -96,29 +39,37 @@
 <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
 </form>
 
-@*@using Microsoft.AspNetCore.Identity
-@inject SignInManager<BTUser> SignInManager
-@inject UserManager<BTUser> UserManager
+@*<div class="dropdown py-sm-4 ms-auto ms-sm-0 flex-shrink-1">
 
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link">Logout</button>
-        </form>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
-</ul>*@
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" alt="" width="28" height="28" class="rounded-circle">
+            <span class="d-none d-sm-inline mx-1">@btUser.FirstName</span>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+            <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Profile</a></li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="javascript:document.getElementById('logoutForm').submit();">Sign out</a></li>
+        </ul>
+
+    }
+    else
+    {
+        <a asp-area="Identity" asp-page="/Account/Login" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" alt="" width="28" height="28" class="rounded-circle">
+            <span class="d-none d-sm-inline mx-1">Log In</span>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+            <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Register</a></li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Login">Sign In</a></li>
+        </ul>
+    }
+</div>
+<form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+</form>*@
