--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,25 @@
-html {
+:root {
+    /* colors for the template */
+    --tn-primary-color: rgb(41, 157, 216);
+    --tn-secondary-color: rgb(42, 198, 201);
+    --tn-highlight-color: rgb(249, 253, 5);
+    --tn-dark-color: rgb(15, 22, 50);
+    --tn-light-color: rgb(42, 198, 201);
+    --tn-background-color: rgba(22, 148, 167, .8);
+    --tn-text-dark-color: rgb(15, 22, 50);
+    --tn-text-light-color: rgb(255, 255, 255);
+    --tn-nav-toggler-glow: rgba(43, 230, 114, 0.55);
+
+    /* fonts for the template */
+    --tn-title-font: 'Bebas Neue', Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    --tn-subtitle-font: 'Fira Sans', sans-serif;
+    --tn-body-font: 'Roboto', sans-serif;
+    --tn-font-size: 1.2rem;
+    --tn-font-weight: 400;
+}
+
+
+/*html {
   font-size: 14px;
 }
 
@@ -15,4 +36,69 @@ html {
 
 body {
   margin-bottom: 60px;
+}*/
+
+/*--------- Styles for Sticky Footer Start ----------*/
+
+/*  html, body tags
+    height of the viewport
+    100% tall
+    takes up all visible space */
+
+html,
+body {
+    height: 100%;
+}
+
+/* body tag 
+            cardboard box
+            making the body a flex box */
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+/* content 
+            grow = 1
+            shrink = 0 
+            making flex box grow 
+            can change content to main - same effect
+            margin-top navbar fixed to the top */
+
+.content {
+    flex: 1 0 auto;
+    /* to offset the nav bar height */
+    margin-top: 4.75rem;
+}
+
+/* footer tag 
+            shrinking the footer as small as possible */
+
+footer {
+    flex-shrink: 0;
+}
+
+/*--------- Styles for Sticky Footer Stop ----------*/
+
+.bootstrapIcons {
+    color: var(--tn-dark-color);
+}
+
+.socialIcons {
+    font-size: 2rem;
+    color: var(--tn-light-color);
+}
+
+    .socialIcons:hover {
+        color: var(--tn-nav-toggler-glow);
+    }
+
+.textLight {
+    color: var(--tn-text-light-color);
+}
+
+.BTUserCommentImg {
+    height: 60px;
+    width: 60px;
 }
