--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,8 +19,10 @@
     <div class="row row-cols-1 row-cols-md-2 align-items-center h-100">
         <div class="col mt-3 mt-md-0">
             <div>
-                <h3 class="textLight">Welcome to my BugTracker!</h3>
-                <p class="text-muted">Home page</p>
+                <h3>Welcome to The <span class="textInsect">Insect</span> <span class="textPul">Crusher</span>!</h3>
+                <p>This is an issues-tracking application.</p>
+                <p>Admin and Project Manager users can create and assign projects. Users can also manage the status of tickets and comment.</p>
+                <p>Admins can manage the roles of employees in their company.</p>
             </div>
         </div>
     </div>
