--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BugTrackerMVC.Models.Project
 @using BugTrackerMVC.Services.Interfaces
-@using BugTrackerMVC.Enums
+@using BugTrackerMVC.Models.Enums
 @inject IBTFileService _BTFileService
 
 @{
