--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@model BugTrackerMVC.Models.Ticket
-@using BugTrackerMVC.Enums
+@using BugTrackerMVC.Models.Enums
 @using BugTrackerMVC.Services.Interfaces
 @inject IBTFileService _BTFileService
 
@@ -183,14 +183,14 @@
                                             <div class="col col-sm-2">
                                                 <a asp-action="ShowFile" asp-controller="Tickets" asp-route-id="@item.Id">
                                                     <div class="icon">
-                                                        <img src="@_BTFileService.GetFileIcon(item.FileName)" style="height:50px;width:50px" data-bs-toggle="tooltip" data-bs-placement="top" title="" data-bs-original-title="@item.FileName" />
+                                                        <img src="@_BTFileService.GetFileIcon(item.FileName!)" style="height:50px;width:50px" data-bs-toggle="tooltip" data-bs-placement="top" title="" data-bs-original-title="@item.FileName" />
                                                     </div>
                                                 </a>
                                                 <div style="font-size:x-small">
                                                     <div class="file-name">
                                                         <strong>@item.Description</strong>
                                                     </div>
-                                                    <small>Size: @_BTFileService.FormatFileSize(item.FileData.Length) </small>
+                                                    <small>Size: @_BTFileService.FormatFileSize(item.FileData!.Length) </small>
                                                 </div>
                                             </div>
                                         }
