--- a/Views/Projects/MyProjects.cshtml
+++ b/Views/Projects/MyProjects.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<BugTrackerMVC.Models.Project>
 @using BugTrackerMVC.Services.Interfaces
-@using BugTrackerMVC.Enums
+@using BugTrackerMVC.Models.Enums
 @inject IBTFileService _BTFileService
 
 @{
