--- a/Views/Tickets/AllTickets.cshtml
+++ b/Views/Tickets/AllTickets.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<BugTrackerMVC.Models.Ticket>
-@using BugTrackerMVC.Enums
+@using BugTrackerMVC.Models.Enums
 @using BugTrackerMVC.Services.Interfaces
 @inject IBTTicketService _BTTicketService
 
